--- a/Clases/12/HA_Proyecto_Base/index.html
+++ b/Clases/12/HA_Proyecto_Base/index.html
@@ -1,62 +1,52 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-  <title>Hack Academy - Proyecto Base</title>
-
-  <!-- CSS de Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
-  <!-- CSS Propio -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Clase 12</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-
-  <div class="container">
+  <div class="container mt-5">
     <div class="row">
       <div class="col-8 px-3">
-        <div class="bg-secondary bg-opacity-25 border border-secondary rounded">
-          <h2 class="">Lista de marcas:</h2>
+        <div class="bg-secondary bg-opacity-25 border border-secondary rounded p-3">
+          <h2>Lista de marcas:</h2>
+          <ul id="listaMarcas"></ul>
         </div>
+        <div id="alerta"></div>
       </div>
-
-
       <div class="col-4 px-3">
-        <div class=" bg-warning bg-opacity-25 border border-warning rounded">
+        <div class="bg-warning bg-opacity-25 border border-warning rounded p-3">
           <h2>Menu de Edicion</h2>
-
-          <button class="btn btn-primary">Mostrar marcas</button>
-          <hr>
-
-          <button class="btn btn-danger">Eliminar ultima marca</button>
-          <hr>
-
-          <input class="form-control mb-2" type="text" name="" id="" placeholder="Escribir una marca..." />
-
-          <button class="btn btn-success">Agregar marca</button>
+          <hr />
+          <button id="mostrarMarcas" class="btn btn-primary">
+            Mostrar marcas
+          </button>
+          <hr />
+          <button id="eliminarUltimaMarca" class="btn btn-danger">
+            Eliminar ultima marca
+          </button>
+          <hr />
+          <input class="form-control mb-2" type="text" name="" id="escribirMarca" placeholder="Escribir una marca..." />
+          <button id="agregarMarca" class="btn btn-success">
+            Agregar marca
+          </button>
+          <hr />
+          <input class="form-control mb-2" type="text" name="" id="eliminarMarca" placeholder="Marca a eliminar" />
+          <button id="eliminarMarcaSeleccionada" class="btn btn-danger">
+            Eliminar marca
+          </button>
         </div>
-
       </div>
     </div>
   </div>
-
-
-
-  <!-- JS de Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-  <!-- JS de Vue.js -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-
-  <!-- JS Propio -->
   <script src="js/app.js"></script>
 </body>
 
